cool es modules

--- a/index.html
+++ b/index.html
@@ -14,22 +14,9 @@
     <body>
         <input type="file" id="xlsx">
 
-        <div class="slides">
-            <div class="index">
-                <div class="topic">
-                    <button class="question">קלי קלות</button>
-                    <button class="question">סביר</button>
-                    <button class="question">קשה אש</button>
-                </div>
-                <div class="topic">
-                    <button class="question">קלי קלות</button>
-                    <button class="question">סביר</button>
-                    <button class="question">קשה אש</button>
-                </div>
-            </div>
-        </div>
-
-        <!-- <script src="node_modules/xlsx/xlsx.js"></script> -->
+        <main>
+            <div class="index"> </div>
+        </main>
         <script src="index.js" type="module"></script>
     </body>
 </html>
