--- a/index.html
+++ b/index.html
@@ -18,5 +18,6 @@
             <div class="index"> </div>
         </main>
         <script src="index.js" type="module"></script>
+        <script src="tinkerbell.js"></script>
     </body>
 </html>
