grid size adaptive to excel input

--- a/index.html
+++ b/index.html
@@ -14,9 +14,7 @@
     <body>
         <input type="file" id="xlsx">
 
-        <main>
-            <div class="index"> </div>
-        </main>
+        <main></main>
         <script src="index.js" type="module"></script>
     </body>
 </html>
