--- a/index.html
+++ b/index.html
@@ -12,9 +12,43 @@
         <link rel="stylesheet" href="style.css" />
     </head>
     <body>
-        <input type="file" id="xlsx">
 
-        <main></main>
+        <main>
+            <div class="intro-explanation" dir=rtl>
+                <div dir="ltr">
+                    <input type="file" id="xlsx">
+                </div>
+                <h1>זה המסך שהצופים לא אמורים לראות</h1>
+                <p>
+                    <ol>
+                        <li>
+                            תעלו קובץ אקסל עם שאלות,
+                            <a href="./example.xlsx">הנה אחד לדוגמה</a>
+                            שתדעו איך המבנה אמור להראות וזה
+                        </li>
+                        <li>
+                            כשאתם בתוך שאלה, אפשר לחזור אחורה בכמה דרכים:
+                            <ul>
+                                <li>כפתור backspace</li>
+                                <li>
+                                    <div> כפתור אחורה בדפדפן, או הקיצורי מקלדת שלו: </div>
+                                    <div>
+                                        <code style="background: #e6e6e6; padding: 3px" dir=ltr>control+⟵</code>
+                                        בווינדוס
+                                    </div>
+                                    <div>
+                                        <code style="background: #e6e6e6; padding: 3px" dir=ltr>command+⟵</code>
+                                        במאק
+                                    </div>
+                                    דוגרי זה עדיף כי זה לא מסתיר את העכבר וללחוץ על backspace כן (זה לא משהו שאפשר לשנות 😢)
+                                </li>
+                            </ul>
+                        </li>
+                        <li>ברגע שנכנסתם לשאלה היא שרופה זהו אין חרטות!!! את חוזרת אחורה והשאלה שרופה זה בלתי הפיך. כמו לקמט נייר</li>
+                    </ol>
+                </p>
+            </div>
+        </main>
         <script src="index.js" type="module"></script>
     </body>
 </html>
