go back to index page on refresh

--- a/index.html
+++ b/index.html
@@ -45,6 +45,7 @@
                             </ul>
                         </li>
                         <li>ברגע שנכנסתם לשאלה היא שרופה זהו אין חרטות!!! את חוזרת אחורה והשאלה שרופה זה בלתי הפיך. כמו לקמט נייר</li>
+                        <li>בשביל לחזור למסך הזה תרעננו תעמוד:)</li>
                     </ol>
                 </p>
             </div>
