replace arrow unicode, remove cursor hiding note

--- a/index.html
+++ b/index.html
@@ -33,14 +33,13 @@
                                 <li>
                                     <div> כפתור אחורה בדפדפן, או הקיצורי מקלדת שלו: </div>
                                     <div>
-                                        <code style="background: #e6e6e6; padding: 3px" dir=ltr>control+⟵</code>
+                                        <code style="background: #e6e6e6; padding: 3px" dir=ltr>control + ←</code>
                                         בווינדוס
                                     </div>
                                     <div>
-                                        <code style="background: #e6e6e6; padding: 3px" dir=ltr>command+⟵</code>
+                                        <code style="background: #e6e6e6; padding: 3px" dir=ltr>command + ←</code>
                                         במאק
                                     </div>
-                                    דוגרי זה עדיף כי זה לא מסתיר את העכבר וללחוץ על backspace כן (זה לא משהו שאפשר לשנות 😢)
                                 </li>
                             </ul>
                         </li>
