dedicate css class for bindings

--- a/index.html
+++ b/index.html
@@ -33,11 +33,11 @@
                                 <li>
                                     <div> כפתור אחורה בדפדפן, או הקיצורי מקלדת שלו: </div>
                                     <div>
-                                        <code style="background: #e6e6e6; padding: 3px" dir=ltr>control + ←</code>
+                                        <code class="keybinding" dir="ltr">control + ←</code>
                                         בווינדוס
                                     </div>
                                     <div>
-                                        <code style="background: #e6e6e6; padding: 3px" dir=ltr>command + ←</code>
+                                        <code class="keybinding" dir="ltr">command + ←</code>
                                         במאק
                                     </div>
                                 </li>
@@ -45,6 +45,12 @@
                         </li>
                         <li>ברגע שנכנסתם לשאלה היא שרופה זהו אין חרטות!!! את חוזרת אחורה והשאלה שרופה זה בלתי הפיך. כמו לקמט נייר</li>
                         <li>בשביל לחזור למסך הזה תרעננו תעמוד:)</li>
+                        <li>
+                            כנסו לפולסקרין עם
+                            <code class="keybinding">control + command + f</code>
+                            ואז בשביל להסתיר את הכרטיסיות תלחצו
+                            <code class="keybinding">shift + command + f</code>
+                        </li>
                     </ol>
                 </p>
             </div>
