xlsx/numbers explanation

--- a/index.html
+++ b/index.html
@@ -48,6 +48,15 @@
                         ואז בשביל להסתיר את הכרטיסיות תלחצו
                         <code class="keybinding">shift + command + f</code>
                     </li>
+                    <li>
+                        <div>
+                            שימו לב שאתם מעלים קובץ אקסל
+                            (סיומת <code>xlsx</code>)
+                            ולא קובץ <code>numbers</code>.
+                        </div>
+                        אם כתבתם בנאמברס אז אפשר עדיין לשמור כקובץ אקסל:
+                        <code dir="ltr" class="keybinding">File -> Export to -> Excel...</code>
+                    </li>
                 </ol>
             </p>
         </div>
