splash page explanation

--- a/index.html
+++ b/index.html
@@ -25,6 +25,10 @@
                         שתדעו איך המבנה אמור להראות וזה
                     </li>
                     <li>
+                        <div> אחרי שתעלו את הקובץ, יהיה מסך ספלאש. בשביל להתחיל את השעשועון, תלחצו על העכבר לחיצה רגילה </div>
+                        <div> בכל מקום. אם לחצתם בטעות הכל טוב, אפשר לחזור לספלאש עם הכפתור אחורה בדפדפן </div>
+                    </li>
+                    <li>
                         כשאתם בתוך שאלה, אפשר לחזור אחורה בכמה דרכים:
                         <ul>
                             <li>כפתור backspace</li>
