ok this is the boilerplate I think
also added some strictification to tinkerbell

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 
         <title>משתעשעים קצת</title>
 
-        <link rel="stylesheet" href="style.css" />
+        <link rel="stylesheet" href="assets/style.css" />
     </head>
     <body>
         <div class="intro-explanation" dir=rtl>
@@ -64,6 +64,6 @@
                 </ol>
             </p>
         </div>
-        <script src="index.js" type="module"></script>
+        <script src="dist/index.js" type="module"></script>
     </body>
 </html>
