--- a/static/index.html
+++ b/static/index.html
@@ -9,9 +9,9 @@
 
         <title>משתעשעים קצת</title>
 
-        <link rel="stylesheet" href="assets/style.css" />
+        <link rel="stylesheet" href="/style.css" />
     </head>
     <body>
-        <script src="dist/index.js" type="module"></script>
+        <script src="/js/index.js" type="module"></script>
     </body>
 </html>
